--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
 
   <h1>To-Don't List</h1>
-  <div class=explain>Click the + to add your worst habits to the To-Don't List. 
-  At the end of the day double click to remove the habits you successfully 
-  avoided and see how you did for a special message!</div>
+  <div class=explain>Add your worst habits to the To-Don't List, then
+   at the end of the day double click to remove the habits you successfully 
+  avoided and view your special message!</div>
 
   <div class="container">
-    <input id="inputField" type="text"><button id="addToDont">+</button>
+    <input id="inputField" type="text" onfocus="this.value=''" value="Enter To-Don't Here"></div>
+    <button id="addToDont">Add To-Don't</button>
     <div class="toDonts" id="toDontContainer"></div>
-    </div>
-    <button id="totalShame">How'd I do?</button>
+    <button id="totalShame">View Message</button>
   </div>
 
 
